--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
 version: '3'
 services:
-  freeswitch:
-    build:
-      context: .
-      dockerfile: Dockerfile.freeswitch
+  voip:
+    image: freeswitch:latest
     depends_on:
       - postgres
     network_mode: "host"
